samples/_failures_safe/1761697369_666fc2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e653184b.c: In function ‘main’:
./samples/SAFE/__tmp_e653184b.c:152:17: error: expected declaration or statement at end of input
  152 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_e653184b.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e653184b.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e653184b.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e653184b.c:152:17: error: expected declaration or statement at end of input
